# sqlalchemy-training

./: .gitignore  README.md  database.py  gitignore.txt  main.py  models.py  phones.db  pyproject.toml  sqlalchemy_training.db  telephones.db
src/sqlalchemy_training/: database.py  main.py  main_sqlachemy.py
